--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -28,6 +28,26 @@
   color: #61dafb;
 }
 
+.nav {
+  ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin:0;
+    padding: 20px;
+
+    li {
+      margin-right: 15px;
+
+      a.active {
+        font-weight: bold;
+        color: #ffaa49;
+      }
+    }
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
