--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -18,7 +18,7 @@
     box-shadow: inset 2px 2px 1px rgba(0, 0, 0, .3)
 }
 
-.Button.disabled {
+.Button[disabled], .Button.disabled {
     background: #ccc;
     color: #000;
     cursor: not-allowed;
